added README file

--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -30,4 +30,8 @@
         <scope>runtime</scope>
     </dependency>
 </dependencies>
+    <build>
+        <finalName>customer-api</finalName>
+    </build>
+
 </project>
