--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
   <modules>
     <module>customer</module>
     <module>fraud</module>
+    <module>eureka-server</module>
+    <module>notification</module>
   </modules>
 
   <properties>
@@ -16,6 +18,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <spring.boot.maven.plugin.version>2.5.7</spring.boot.maven.plugin.version>
     <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
+    <spring.cloud-verion>2020.0.3</spring.cloud-verion>
   </properties>
 
   <dependencyManagement>
@@ -25,6 +28,13 @@
         <artifactId>spring-boot-dependencies</artifactId>
         <version>${spring.boot.dependencies.version}</version>
         <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring.cloud-verion}</version>
+      <scope>import</scope>
         <type>pom</type>
       </dependency>
     </dependencies>
